<resources>
    <string name="app_name">HealingTime_DesignRenew</string>
    <string name="name">"이름"</string>
    <string name="sub_name">"학명"</string>
    <string name="extract_part">"추출부위"</string>
    <string name="extract_method">"추출방법"</string>
    <string name="country_origin">"원산지"</string>
    <string name="detailed_instructions">"상세설명"</string>
    <string name="color">"색상"</string>
    <string name="blending_oil">"블렌딩하기 좋은 오일"</string>
    <string name="history">"역사"</string>
    <string name="caution">"주의"</string>
</resources>
