<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.healingtime.healingtime_designrenew.MainActivity">

    <RelativeLayout
        android:id="@+id/aroma_digest"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp">

        <ImageView
            android:id="@+id/single_aroma_icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@drawable/picture_frame"
            android:src="@drawable/aroma_basil" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/single_aroma_icon"
            android:orientation="vertical">

            <TextView
                android:id="@+id/top_aroma_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="Basil"
                android:textColor="#000000"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/top_aroma_sub_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="Ocimum basilicum"
                android:textColor="#CDCFCA"
                android:textSize="12dp" />

        </LinearLayout>

        <Button
            android:id="@+id/aroma_name_edit_btn"
            android:layout_width="75dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/round_btn_green"
            android:text="T"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>
        <View
            android:id="@+id/top_slide_bar"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#CDCFCA" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aroma_digest">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/aroma_extract_part"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/extract_part"
                    android:textColor="#000000"
                    android:textSize="18dp" />
                <TextView
                    android:id="@+id/single_aroma_extract_part"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:text="-"
                    android:textColor="#717171"
                    android:textSize="15dp" />
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#CDCFCA"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/aroma_extract_method"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/extract_method"
                    android:textColor="#000000"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/single_aroma_extract_method"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:text="-"
                    android:textColor="#717171"
                    android:textSize="15dp" />
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#CDCFCA"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/aroma_country_origin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/country_origin"
                    android:textColor="#000000"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/single_aroma_country_origin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="15dp"
                    android:textColor="#717171" />
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#CDCFCA"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/aroma_detailed_instructions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/aroma_country_origin"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/detailed_instructions"
                    android:textColor="#000000"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/single_aroma_detailed_instructions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/single_aroma_country_origin"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_toRightOf="@+id/aroma_detailed_instructions"
                    android:text="testtesttesttesttest"
                    android:textSize="15dp"
                    android:lineSpacingExtra="15dp"
                    android:textColor="#717171" />
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#CDCFCA"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/aroma_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/aroma_detailed_instructions"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/color"
                    android:textColor="#000000"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/single_aroma_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/single_aroma_detailed_instructions"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_toRightOf="@+id/aroma_color"
                    android:textSize="15dp"
                    android:textColor="#717171" />
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#CDCFCA"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/aroma_blending_oil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/aroma_color"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/blending_oil"
                    android:textColor="#000000"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/single_aroma_blending_oil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/single_aroma_color"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_toRightOf="@+id/aroma_blending_oil"
                    android:lineSpacingExtra="15dp"
                    android:textSize="15dp"
                    android:textColor="#717171" />
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#CDCFCA"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/aroma_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/aroma_blending_oil"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/history"
                    android:textColor="#000000"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/single_aroma_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/single_aroma_blending_oil"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_toRightOf="@+id/aroma_history"
                    android:lineSpacingExtra="15dp"
                    android:textSize="15dp"
                    android:textColor="#717171" />
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#CDCFCA"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/aroma_caution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/aroma_history"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/caution"
                    android:textColor="#000000"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/single_aroma_caution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/single_aroma_history"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_toRightOf="@+id/aroma_caution"
                    android:lineSpacingExtra="15dp"
                    android:textSize="15dp"
                    android:textColor="#717171" />
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#CDCFCA"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
